Made the following changes: - Added behavioural detection test capabilities - Added behaviorual detection test for script tag elements - Added ability to select type of log for analysis - Added selection method within UI to allow for a user to select the type of log for analysis

--- a/LogAnalysisTool.csproj
+++ b/LogAnalysisTool.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="DevExpressMvvm" Version="22.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Anomaly Based Detection Tests\" />
+  </ItemGroup>
+
 </Project>
