Made the following major changes: - Generalised HTML keyword behavioural detection tests to one class, which reuses the code to check all HTML keywords instead of having seperate classes/methods for each. The other classes/methods which previously existed to check each keyword individually have therefore been removed. - Implemented the use of regular expressions within the detection of behavioural-based signatures. - Added a new interface for a basic test. - Added XAML themes for different UI components.

--- a/LogAnalysisTool.csproj
+++ b/LogAnalysisTool.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Anomaly Based Detection Tests\" />
+    <Folder Include="Statistic Reporting\" />
   </ItemGroup>
 
 </Project>
