Made the following major changes: - Completed Anomaly-Based Detection Mechanism - Added Progress Bar - Added Tor End Point Check - Updated UI - Added Stats Page Functionality

--- a/LogAnalysisTool.csproj
+++ b/LogAnalysisTool.csproj
@@ -20,11 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="DevExpressMvvm" Version="22.1.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Anomaly Based Detection Tests\" />
-    <Folder Include="Statistic Reporting\" />
+    <PackageReference Include="Microsoft.ML" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
